--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 html body{
-    height: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  user-select: none;
+  --webkt-user-select: none;
+  -webkit-tap-highlight-color: transparent
 }
