--- a/src/Editor/BlocklyEditor/index.css
+++ b/src/Editor/BlocklyEditor/index.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 
+.blocklyDiv{
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+}
+
 .blocklyFlyoutButton{
   fill: rgb(7, 105, 158);
   cursor: pointer !important;
