--- a/src/Editor/Toolbar/index.css
+++ b/src/Editor/Toolbar/index.css
@@ -1,14 +1,23 @@
 .toolbar{
     width: 100vw;
-    height: 25px;
+    height: 30px;
     background-color: #1a1a1a;
     display: flex;
-    flex-shrink: 0;
+    flex-shrink: 0 0 auto;
+    align-items: center;
+}
+
+.toolbar > .logo{
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 30px;
+    height: 30px;
 }
 
 .toolbarButton{
     cursor: pointer;
     width: max-content;
+    height: 20px;
     padding-left: 5px;
     margin-right: 10px;
     padding-right: 5px;
